# os2linux

./: CMakeLists.txt  LICENSE
include/os2linux/macosx/: endian.h
include/os2linux/windows/: pthread.h
src/windows/: pthread.c
